maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: '=' expected but '(' found.
def trouvee_baggle():Array[Int](2) = {
                               ^JediEscaper:12: error: illegal start of simple expression
def marquer() {
^